--- a/index.html
+++ b/index.html
@@ -6,7 +6,102 @@
     <link href="resources/css/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
+    <!-- Header -->
+<header>
+ <span class="logo"><img src="file:///C:/Users/marto/Projects/TeaCozy/Resources/images/img-tea-cozy-logo.png"></span>
+  <div class="navigation">
+   <span><a href="#mission">Mission</a></span>
+   <span><a href="#context">Featured Tea</a></span>
+   <span><a href="#">Locations</a></span>
+  </div>
+</header>
 
+<!-- Top side -->
+<div class="top" id="mission">
+  <div class="top-text">
+    <h2>Our Mission</h2>
+    <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+ </div>
+</div>
+
+<!-- Center Section -->
+<div class="center" id="context">
+
+  <div class="center-text">
+    <h2>Tea of the Month</h2>
+    <h4>What's Steepig at The Tea Cozy?</h4>
+  </div>
+
+<div class="container">
+
+  <div class="picture">
+      <img src="file:///C:/Users/marto/Projects/TeaCozy/Resources/images/img-berryblitz.jpg">
+        <h4>Fall Berry Blitz Tea</h4>
+
+  </div>
+
+  <div class="picture">
+    <img src="file:///C:/Users/marto/Projects/TeaCozy/Resources/images/img-spiced-rum.jpg">
+    <h4>Spiced Rum Tea</h4>
+
+  </div>
+
+  <div class="picture">
+    <img src="file:///C:/Users/marto/Projects/TeaCozy/Resources/images/img-donut.jpg">
+    <h4>Seasonal Donuts</h4>
+  </div>
+
+  <div class="picture">
+    <img src="file:///C:/Users/marto/Projects/TeaCozy/Resources/images/img-myrtle-ave.jpg">
+    <h4>Myrtle Ave Tea</h4>
+  </div>
+
+  <div class="picture">
+    <img src="file:///C:/Users/marto/Projects/TeaCozy/Resources/images/img-bedford-bizarre.jpg">
+    <h4>Bedford Bizarre Tea</h4>
+  </div>
+
+</div>
+
+</div>
+
+<!-- Bottom Section -->
+<div class="bottom" id="locations">
+<h2>Locations</h2>
+  <div class="adresses">
+
+   <div class="bot-text">
+    <h3>Downtown</h3>
+    <p>384 West 4th St</p>
+    <p>Suite 108</p>
+    <p>Portland, Maine</p>
+  </Div>
+
+  <div class="bot-text">
+    <h3>East Bayside</h3>
+    <p>3433 Phisherman's Avenue</p>
+    <p>(Northwest Corner)</p>
+    <p>Portland, Maine</p>
+  </div>
+
+  <div class="bot-text">
+    <h3>Oakdale</h3>
+    <p>515 Crescent Avenue</p>
+    <p>Second Floor</p>
+    <p>Portland, Maine</p>
+  </div>
+ </div>
+</div>
+<!-- Bottom Text -->
+<div class="bottom-info">
+  <h2>The Tea Cozy</h2>
+  <h5>contact@theteacozy.com</h5>
+  <h5>917-555-8904</h5>
+</div>
 
   </body>
+  <footer>
+    <p>copyright The Tea Cozy 2017</p>
+  </footer>
+
 </html>
