--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <!-- Header -->
 <header>
- <span class="logo"><img src="file:///C:/Users/marto/Projects/TeaCozy/Resources/images/img-tea-cozy-logo.png"></span>
+ <span class="logo"><img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png"></span>
   <div class="navigation">
    <span><a href="#mission">Mission</a></span>
    <span><a href="#context">Featured Tea</a></span>
@@ -35,7 +35,7 @@
 <div class="container">
 
   <div class="picture">
-      <img src="file:///C:/Users/marto/Projects/TeaCozy/Resources/images/img-berryblitz.jpg">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg">
         <h4>Fall Berry Blitz Tea</h4>
 
   </div>
@@ -47,17 +47,17 @@
   </div>
 
   <div class="picture">
-    <img src="file:///C:/Users/marto/Projects/TeaCozy/Resources/images/img-donut.jpg">
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg">
     <h4>Seasonal Donuts</h4>
   </div>
 
   <div class="picture">
-    <img src="file:///C:/Users/marto/Projects/TeaCozy/Resources/images/img-myrtle-ave.jpg">
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg">
     <h4>Myrtle Ave Tea</h4>
   </div>
 
   <div class="picture">
-    <img src="file:///C:/Users/marto/Projects/TeaCozy/Resources/images/img-bedford-bizarre.jpg">
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg">
     <h4>Bedford Bizarre Tea</h4>
   </div>
 
