--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tea Cozy</title>
-    <link href="resources/css/style.css" type="text/css" rel="stylesheet"/>
+    <link rel="stylesheet" href="./Resources/css/style.css">
   </head>
   <body>
     <!-- Header -->
@@ -41,7 +41,7 @@
   </div>
 
   <div class="picture">
-    <img src="file:///C:/Users/marto/Projects/TeaCozy/Resources/images/img-spiced-rum.jpg">
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg">
     <h4>Spiced Rum Tea</h4>
 
   </div>
